select improved z-index fixed for header + select

--- a/assets/src/sass/frontend/_header.scss
+++ b/assets/src/sass/frontend/_header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   position: absolute;
   top: 0;
-  z-index: 20;
+  z-index: 1000;
 
   .header--fixed & {
     background-color: #fff;
@@ -24,10 +24,10 @@
     max-width: $containerWidth;
     margin: 0 auto;
     padding: $gridGutter/2 $gridGutter;
-    display         : flex;
-    align-items     : center;
-    justify-content : space-between;
-    @include down($large){
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @include down($large) {
       flex-wrap: wrap;
     }
   }
@@ -37,10 +37,10 @@
       max-width: 85%;
     }
     img {
-      max-width : 100%;
+      max-width: 100%;
       max-height: 60px;
-      @include up($large){
-        max-width : 180px;
+      @include up($large) {
+        max-width: 180px;
         max-height: none;
       }
     }
@@ -93,7 +93,5 @@
       justify-content: flex-end;
       align-items: center;
     }
-
   }
-
 }
