--- a/assets/src/sass/frontend/components/_gravity-form.scss
+++ b/assets/src/sass/frontend/components/_gravity-form.scss
@@ -639,105 +639,7 @@ form.gform {
   }
 }
 
-/*-----------------------*
- * SUBMIT
- *-----------------------*/
-@import "gravity-form/dropdown";
-
 .wp-editor-container {
   border: 1px solid $colorBorder !important;
   border-radius: 4px;
-}
-
-/*-----------------------*
- * CUSTOM SELECT
- *-----------------------*/
-.select-hidden {
-  display: none;
-  padding-right: 1rem;
-  visibility: hidden;
-}
-
-.select {
-  color: $colorText;
-  cursor: pointer;
-  display: inline-block;
-  height: 3.4rem;
-  line-height: 3.4rem;
-  position: relative;
-  width: 100%;
-}
-.select-styled {
-  background-color: $colorWhite;
-  border: 1px solid $colorBorder;
-  border-radius: 5px;
-  bottom: 0;
-  font-size: 1.4rem;
-  left: 0;
-  padding-inline: 1rem;
-  position: absolute;
-  right: 0;
-  top: 0;
-
-  &:after {
-    border: 0.7rem solid transparent;
-    border-color: $colorBorder transparent transparent transparent;
-    content: "";
-    height: 0;
-    position: absolute;
-    right: 1rem;
-    top: 1.3rem;
-    width: 0;
-  }
-
-  &:hover {
-    background-color: $colorGreyLight;
-  }
-
-  &:active,
-  &.active {
-    background-color: $colorGreyLight;
-
-    &:after {
-      border-color: transparent transparent $colorText transparent;
-      top: 0.6rem;
-    }
-  }
-}
-
-.select-options {
-  background-color: $colorGreyLight;
-  border: 1px solid $colorBorder;
-  border-radius: 5px;
-  border-top: none;
-  box-shadow: 0 1px 10px $colorGreyLight;
-  display: none;
-  font-size: 1.4rem;
-  left: 0;
-  list-style: none;
-  margin: 3px 0 0;
-  max-height: 30vh;
-  overflow-y: scroll;
-  padding: 0;
-  position: absolute;
-  right: 0;
-  top: 100%;
-  z-index: 999;
-
-  li {
-    border-top: 1px solid $colorBorder;
-    margin: 0;
-    padding: 0.8rem 0;
-    text-indent: 1.5rem;
-
-    &:hover,
-    &.is-selected {
-      background: $colorPrimary;
-      color: $colorWhite;
-    }
-
-    &[rel="hide"] {
-      display: none;
-    }
-  }
 }
